--- a/contrail/frontend/apps/contrailsite/templates/about.html
+++ b/contrail/frontend/apps/contrailsite/templates/about.html
@@ -41,7 +41,7 @@
           <div class="coldescription">
             <h5> Jingwen Low </h5>
             <p>
-              Jingwen is a 4th year UC Davis Computer Science and Engineering student. She is also currently works as a full stack developer at ASUCD Creative Media.
+              Jingwen is a 4th year UC Davis Computer Science and Engineering student. She also currently works as a full stack developer at ASUCD Creative Media.
             </p>
           </div>
 				</div>
