--- a/contrail/frontend/apps/contrailsite/templates/history_graph.html
+++ b/contrail/frontend/apps/contrailsite/templates/history_graph.html
@@ -46,7 +46,7 @@
                 newDate(6)*/
             ],
             datasets: [{
-                label: 'Hourly On Demand',
+                label: 'On Demand',
                 backgroundColor: color(window.chartColors.red).alpha(0.5).rgbString(),
                 borderColor: window.chartColors.red,
                 fill: false,
@@ -56,7 +56,7 @@
                     {% endfor %}
                 ],
             }, {
-                label: 'Hourly Reserved (1yr, no up front)',
+                label: 'Reserved (1yr, no up front)',
                 backgroundColor: color(window.chartColors.purple).alpha(0.5).rgbString(),
                 borderColor: window.chartColors.purple,
                 fill: false,
@@ -66,7 +66,7 @@
                     {% endfor %}
                 ],
             }, {
-                label: 'Hourly Spot',
+                label: 'Spot',
                 backgroundColor: color(window.chartColors.green).alpha(0.5).rgbString(),
                 borderColor: window.chartColors.green,
                 fill: false,
@@ -119,7 +119,7 @@
                 newDate(6)*/
             ],
             datasets: [{
-                label: 'Daily On Demand',
+                label: 'On Demand',
                 backgroundColor: color(window.chartColors.red).alpha(0.5).rgbString(),
                 borderColor: window.chartColors.red,
                 fill: false,
@@ -129,7 +129,7 @@
                     {% endfor %}
                 ],
             }, {
-                label: 'Daily Reserved (1yr, no up front)',
+                label: 'Reserved (1yr, no up front)',
                 backgroundColor: color(window.chartColors.purple).alpha(0.5).rgbString(),
                 borderColor: window.chartColors.purple,
                 fill: false,
@@ -139,7 +139,7 @@
                     {% endfor %}
                 ],
             }, {
-                label: 'Daily Spot',
+                label: 'Spot',
                 backgroundColor: color(window.chartColors.green).alpha(0.5).rgbString(),
                 borderColor: window.chartColors.green,
                 fill: false,
@@ -192,7 +192,7 @@
                 newDate(6)*/
             ],
             datasets: [{
-                label: 'Monthly On Demand',
+                label: 'On Demand',
                 backgroundColor: color(window.chartColors.red).alpha(0.5).rgbString(),
                 borderColor: window.chartColors.red,
                 fill: false,
@@ -202,7 +202,7 @@
                     {% endfor %}
                 ],
             }, {
-                label: 'Monthly Reserved (1yr, no up front)',
+                label: 'Reserved (1yr, no up front)',
                 backgroundColor: color(window.chartColors.purple).alpha(0.5).rgbString(),
                 borderColor: window.chartColors.purple,
                 fill: false,
@@ -212,7 +212,7 @@
                     {% endfor %}
                 ],
             }, {
-                label: 'Monthly Spot',
+                label: 'Spot',
                 backgroundColor: color(window.chartColors.green).alpha(0.5).rgbString(),
                 borderColor: window.chartColors.green,
                 fill: false,
