--- a/contrail/frontend/apps/contrailsite/templates/home.html
+++ b/contrail/frontend/apps/contrailsite/templates/home.html
@@ -48,7 +48,7 @@
                 <h4 class="text-white">See the costs of particular VM types over time.</h4>
                 <!-- <p class="mb-0 text-white-50">See the costs of particular VM types over time.</p> -->
                 <hr class="d-none d-lg-block mb-0 ml-0"><br>
-                <a href="{% url "help" %}" >Get started</a>
+                <a href="{% url "help" %}#detailedinstance" >Get started</a>
               </div>
             </div>
           </div>
@@ -67,7 +67,7 @@
                 <h4 class="text-white">Compare price and feature differences of specific VMs.</h4>
                 <!-- <p class="mb-0 text-white-50">Compare price differences when VM characteristics change.</p> -->
                 <hr class="d-none d-lg-block mb-0 mr-0"><br>
-                <a href="{% url "help" %}" >Get started</a>
+                <a href="{% url "help" %}#compareprices" >Get started</a>
               </div>
             </div>
           </div>
@@ -86,7 +86,7 @@
                 <h4 class="text-white">Compare similar VMs across different regions and cloud providers.</h4>
                 <!-- <p class="mb-0 text-white-50">Compare similar VMs across different regions and cloud providers.</p> -->
                 <hr class="d-none d-lg-block mb-0 ml-0"><br>
-                <a href="{% url "help" %}" >Get started</a>
+                <a href="{% url "help" %}#usesidebar" >Get started</a>
               </div>
             </div>
           </div>
@@ -105,7 +105,7 @@
                 <h4 class="text-white">Compare the prices of cloud storage in a centralized space.</h4>
                 <!-- <p class="mb-0 text-white-50">Test out different payment types to see what’s right for you.</p> -->
                 <hr class="d-none d-lg-block mb-0 mr-0"><br>
-                <a href="{% url "help" %}" >Get started</a>
+                <a href="{% url "help" %}#cloudstorage" >Get started</a>
               </div>
             </div>
           </div>
