update column headings

--- a/contrail/frontend/apps/contrailsite/templates/help.html
+++ b/contrail/frontend/apps/contrailsite/templates/help.html
@@ -198,7 +198,7 @@
               <p>
                 The bottom of the page includes a graph showing the pricing trends for the instance with the different payment options. You can toggle the options to view only one to all payment options.
               </p>
-              <img src="{% static 'img/instgraph.png' %}" class="pics">
+              <img src="{% static 'img/insgraph.png' %}" class="pics">
             </li>
           </ol>
         </div>
