--- a/contrail/frontend/apps/contrailsite/templates/list.html
+++ b/contrail/frontend/apps/contrailsite/templates/list.html
@@ -234,12 +234,12 @@
           <table id="instancesComp" class="table table-striped table-hover table-bordered comparetable" style="width:100%">
             <thead>
               <tr>
-                <th style="width:40%">Provider</th>
+                <th style="width:40%">Instance Type</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <th>Instance Type</th>
+                <th>Provider</th>
               </tr>
               <tr>
                 <th>Region</th>
