--- a/contrail/frontend/apps/contrailsite/templates/base.html
+++ b/contrail/frontend/apps/contrailsite/templates/base.html
@@ -42,7 +42,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top navbar-shrink" id="mainNav">
     <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="/">CONTRAIL <sup>Beta</sup></a>
+        <a class="navbar-brand js-scroll-trigger" href="/">CONTRAIL</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
